[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/GamePauseMenu/GamePauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Theme/ItsBelow.theme" type="Theme" id=2]

[node name="GamePauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.0666667, 0.0666667, 0.784314 )

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Options" type="VBoxContainer" parent="Center"]
margin_left = 845.0
margin_top = 470.0
margin_right = 1075.0
margin_bottom = 610.0

[node name="Label" type="Label" parent="Center/Options"]
margin_right = 230.0
margin_bottom = 24.0
text = "Nightmare Suspended"

[node name="HSeparator" type="HSeparator" parent="Center/Options"]
margin_top = 28.0
margin_right = 230.0
margin_bottom = 32.0

[node name="Resume" type="Button" parent="Center/Options"]
margin_top = 36.0
margin_right = 230.0
margin_bottom = 68.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../QuitToDesktop")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../QuitToMainMenu")
focus_next = NodePath("../QuitToMainMenu")
focus_previous = NodePath("../QuitToDesktop")
text = "Resume"

[node name="QuitToMainMenu" type="Button" parent="Center/Options"]
margin_top = 72.0
margin_right = 230.0
margin_bottom = 104.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Resume")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../QuitToDesktop")
focus_next = NodePath("../QuitToDesktop")
focus_previous = NodePath("../Resume")
text = "Quit to Main"

[node name="QuitToDesktop" type="Button" parent="Center/Options"]
margin_top = 108.0
margin_right = 230.0
margin_bottom = 140.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../QuitToMainMenu")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Resume")
focus_next = NodePath("../Resume")
focus_previous = NodePath("../QuitToMainMenu")
text = "Quit to Desktop"

[connection signal="pressed" from="Center/Options/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Center/Options/QuitToMainMenu" to="." method="_on_QuitToMainMenu_pressed"]
[connection signal="pressed" from="Center/Options/QuitToDesktop" to="." method="_on_QuitToDesktop_pressed"]
